--- a/HSTUTU_HFT_2021221.JSClient/wwwroot/index.html
+++ b/HSTUTU_HFT_2021221.JSClient/wwwroot/index.html
@@ -7,36 +7,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Blogs</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Posts <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Tags</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
 
     <div class="container" style="margin-top: 2%">
         <div id="formdiv" class="d-flex justify-content-between border border-grey text-secondary">
             <label style="margin: 5px;padding:5px">ADD NEW BLOG</label>
-            <input type="text" id="blogName" />
+            <input placeholder="Title" type="text" id="blogName" />
             <button onclick="create()" type="button">Add Blog</button>
         </div>
     </div>
@@ -62,6 +37,47 @@
             <input type="hidden" id="edit-id" />
             <input type="text" id="edit-title" />
             <button onclick="Update()" type="button">Edit Blog</button>
+        </div>
+    </div>
+
+    <div class="container" style="margin-top: 2%">
+        <div id="formdiv" class="d-flex justify-content-between border border-grey text-secondary">
+            <label style="margin: 5px;padding:5px">ADD NEW POST</label>
+            <select style="width:5%" id="blog-options"></select>
+            <input type="text" placeholder="Post Title" id="post-title" />
+            <input type="text" placeholder="Post Content" id="post-content" />
+            <input type="text" placeholder="Likes" id="post-likes" />
+            <button onclick="createPost()" type="button">Add Post</button>
+        </div>
+    </div>
+
+    <div class="container">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Title</th>
+                    <th>Blog Id</th>
+                    <th>Post Content</th>
+                    <th>Likes</th>
+                    <th>Delete</th>
+                    <th>Update</th>
+                </tr>
+            </thead>
+            <tbody id="results-post">
+            </tbody>
+        </table>
+    </div>
+
+    <div class="container" style="margin-bottom: 20px;">
+        <div id="formdiv" class="d-flex justify-content-between border border-grey text-secondary">
+            <label style="margin: 5px;padding:5px">EDIT POST</label>
+            <input type="hidden" id="edit-id-post" />
+            <input type="text" id="edit-title-post" />
+            <input type="text" id="edit-blogId-post" />
+            <input type="text" id="edit-postContent-post" />
+            <input type="text" id="edit-likes-post" />
+            <button onclick="UpdatePost()" type="button">Edit Post</button>
         </div>
     </div>
 
